# online_platform

./: .env-sample  .gitignore  README.md  online_platform.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
online_platform/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
online_platform/migrations/: 0001_initial.py  0002_alter_supplier_level_network.py  0003_alter_network_options_network_name.py  0004_alter_network_name.py  0005_remove_supplier_debt_network_supplier_debt_and_more.py  0006_contact_network_contact.py  0007_alter_network_contact.py  0008_alter_network_contact.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
